# Thanadolos

./: .gitignore  AuthPatch.swf  README.md  TODO WORLD.txt  Thanadolos.sln  aes.txt  compilation.txt  test.html
Database/: experiences.sql  maps_positions.sql  maps_subareas.sql  thanadolos_auth.sql
Thanadolos Auth/: Account.hpp  Auth.cpp  Auth.hpp  AuthHandler.cpp  AuthHandler.hpp  BasicPingMessage.cpp  BasicPingMessage.hpp  BinaryReader.cpp  BinaryReader.hpp  BinaryWriter.cpp  BinaryWriter.hpp  BooleanByteWrapper.cpp  BooleanByteWrapper.hpp  ByteOrder.cpp  ByteOrder.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Config.cpp  Config.hpp  Database.cpp  Database.hpp  GameServerInformations.cpp  GameServerInformations.hpp  HelloConnectMessage.cpp  HelloConnectMessage.hpp  IPC.cpp  IPC.hpp  IPCClient.cpp  IPCClient.hpp  IType.hpp  IdentificationFailedMessage.cpp  IdentificationFailedMessage.hpp  IdentificationFailureReason.hpp  IdentificationMessage.cpp  IdentificationMessage.hpp  IdentificationSuccessMessage.cpp  IdentificationSuccessMessage.hpp  IpcDeletedCharacterMessage.cpp  IpcDeletedCharacterMessage.hpp  (+45 more)
Thanadolos World/: AbstractCharacterInformation.cpp  AbstractCharacterInformation.hpp  AbstractFightTeamInformations.cpp  AbstractFightTeamInformations.hpp  AccountCapabilitiesMessage.cpp  AccountCapabilitiesMessage.hpp  AccountRecord.hpp  AccountRole.hpp  ActorAlignmentInformations.cpp  ActorAlignmentInformations.hpp  ActorExtendedAlignmentInformations.cpp  ActorExtendedAlignmentInformations.hpp  ActorRestrictionsInformations.cpp  ActorRestrictionsInformations.hpp  AdminCommandMessage.cpp  AdminCommandMessage.hpp  AdminHandler.cpp  AdminHandler.hpp  ApproachHandler.cpp  ApproachHandler.hpp  AuthenticationTicketAcceptedMessage.cpp  AuthenticationTicketAcceptedMessage.hpp  AuthenticationTicketMessage.cpp  AuthenticationTicketMessage.hpp  BasicCharactersListMessage.cpp  BasicCharactersListMessage.hpp  BinaryReader.cpp  BinaryReader.hpp  BinaryWriter.cpp  BinaryWriter.hpp  BooleanByteWrapper.cpp  BooleanByteWrapper.hpp  Breeds.hpp  BreedsRecord.hpp  ByteOrder.cpp  ByteOrder.hpp  ChangeMapMessage.cpp  ChangeMapMessage.hpp  Character.cpp  Character.hpp  (+297 more)
x64/Debug/: auth_config.th  world_config.th
