cmake_minimum_required(VERSION 3.7)
project(Thanadolos_Auth)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Account.hpp
        Auth.cpp
        Auth.hpp
        AuthHandler.cpp
        AuthHandler.hpp
        BasicPingMessage.cpp
        BasicPingMessage.hpp
        binary64.cpp
        binary64.h
        BinaryReader.cpp
        BinaryReader.hpp
        BinaryWriter.cpp
        BinaryWriter.hpp
        BooleanByteWrapper.cpp
        BooleanByteWrapper.hpp
        ByteOrder.cpp
        ByteOrder.hpp
        Client.cpp
        Client.hpp
        Config.cpp
        Config.hpp
        Database.cpp
        Database.hpp
        ft_bzero.cpp
        GameServerInformations.cpp
        GameServerInformations.hpp
        HelloConnectMessage.cpp
        HelloConnectMessage.hpp
        IdentificationFailedMessage.cpp
        IdentificationFailedMessage.hpp
        IdentificationFailureReason.hpp
        IdentificationMessage.cpp
        IdentificationMessage.hpp
        IdentificationSuccessMessage.cpp
        IdentificationSuccessMessage.hpp
        imessage.h
        int64.cpp
        int64.h
        IPC.cpp
        IPC.hpp
        IPCClient.cpp
        IPCClient.hpp
        IpcDeletedCharacterMessage.cpp
        IpcDeletedCharacterMessage.hpp
        IpcNewCharacterMessage.cpp
        IpcNewCharacterMessage.hpp
        IpcTicketAccountMessage.cpp
        IpcTicketAccountMessage.hpp
        IType.hpp
        Locker.cpp
        Locker.hpp
        Logger.cpp
        Logger.hpp
        Main.cpp
        Packet.cpp
        Packet.hpp
        Processor.cpp
        Processor.hpp
        ProtocolRequired.cpp
        ProtocolRequired.hpp
        RawDataMessage.cpp
        RawDataMessage.hpp
        SelectedServerDataMessage.cpp
        SelectedServerDataMessage.hpp
        ServerListMessage.cpp
        ServerListMessage.hpp
        ServerSelectionMessage.cpp
        ServerSelectionMessage.hpp
        ServerStatus.hpp
        ServerStatusUpdateMessage.cpp
        ServerStatusUpdateMessage.hpp
        Tickets.cpp
        Tickets.hpp
        types.h
        uint64.cpp
        uint64.h
        Utils.h
        Version.cpp
        Version.hpp
        VersionExtended.cpp
        VersionExtended.hpp
        WorldsCharacters.hpp
        WorldsServers.hpp)

add_executable(Thanadolos_Auth ${SOURCE_FILES})